django_project/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app      
  template:
    metadata:
      labels:
        app: django-app
      annotations:  # Add annotations here
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"         
    spec:
      containers:
      - name: django-app
        image: roshnihande/capstone-project:latest  # Your Docker image name
        ports:
        - containerPort: 8000
